--- a/creating-backend/order-form.html
+++ b/creating-backend/order-form.html
@@ -9,6 +9,9 @@
         <input type="text" value=""><br><br>
         <input type="button" onclick="save(event)" value="Submit">
     </form>
+    <ol id='orderlist'>
+
+    </ol>
 </body>
 
 </html>
