dynamic drop box

--- a/creating-backend/order-form.html
+++ b/creating-backend/order-form.html
@@ -7,6 +7,7 @@
         <input type="text" value=""><br>
         <label>Price</label><br>
         <input type="text" value=""><br><br>
+        <select id="categories" ></select>
         <input type="button" onclick="save(event)" value="Submit">
     </form>
     <ol id='orderlist'>
