--- a/creating-backend/order-form.html
+++ b/creating-backend/order-form.html
@@ -3,10 +3,11 @@
     <body>
         <form>
             <label>Item</label><br>
-            <input type="text" value=""><br>
+            <input id='item' type="text" value="Laptop"><br>
             <label>Price</label><br>
-            <input type="text" value=""><br><br>
+            <input id='price' type="text" value="1000"><br><br>
             <select id="categories" ></select>
+            order date: <input id="orderDate" type="date">
             <input type="button" onclick="save(event)" value="Submit">
     </form>
     <ol id='orderlist'>
