--- a/createTextField.html
+++ b/createTextField.html
@@ -11,6 +11,7 @@
             let fieldNew = document.createElement('input');
             fieldNew.setAttribute('type', 'radio');
             holder.appendChild(fieldNew);
+            modified
         }
     </script>
 </head>
